[FIX] web: css long word breaking out kanban tile
When words are too long this may break out of a kanban tile and getting
everywhere.

This is not wanted and the content should be:

- hidden if overflown or
- long words should be wrapped or
- too long content should be ellipsed

The ellipsis is probably the best but this would affect the current
behavior (we would have to specify a max-height which unexpectedly
may be bothersome to currently existing data).

So breaking long words has been choosen in this change.

opw-806278
closes #22435

--- a/addons/web/static/src/less/kanban_view.less
+++ b/addons/web/static/src/less/kanban_view.less
@@ -208,7 +208,9 @@
             .o_kanban_record_headings {
                 line-height: 1.2;
                 .o-flex(1, 1, auto);
-
+                // Ensure long word doesn't break out of container
+                word-wrap: break-word;
+                overflow: hidden;
             }
         }
 
